--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       </div>
       <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="bttps://guidofamula.com">Guido Famula</a>.</div>
     </div>
-    <script src="./scripts.js"></script>
+    <script type="module" src="./scripts.js"></script>
   </body>
 </html>
