fixed generate button to full circullar

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
       </div>
       <div class="button-dice">
-        <div class="border-button">
-          <img id="generate-api" src="./src/images/icon-dice.svg" alt="Icon for dice" />
+        <div id="generate-api" class="border-button">
+          <img src="./src/images/icon-dice.svg" alt="Icon for dice" />
         </div>
       </div>
       <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="bttps://guidofamula.com">Guido Famula</a>.</div>
